Bozza home - about us
Co-Authored-By: Ciro Maiorino <64643896+Tekhorror@users.noreply.github.com>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,13 +6,14 @@
     <title>Home</title>
 </head>
 <body>
+
 <div layout:fragment="contenuto-pagina">
     <div class="container">
         <div class="row">
 
             <div class="col">
                 <a href="/club-del-libro/"><img
-                        th:src="@{~/image/home/Club_del_libro.jpeg}"></a>
+                        th:src="@{~/image/home/club-del-libro.jpg}"></a>
 
                 <p>Clicca sull'immagine per visualizzare i club del libro
                     ed unirti a milioni di lettori che condividono
@@ -21,7 +22,7 @@
 
             <div class="col">
                 <a href="/visualizza-biblioteche/"><img
-                        th:src="@{~/image/home/Biblioteche.jpg}">
+                        th:src="@{~/image/home/biblioteca.jpg}">
                 </a>
 
                 <p>Clicca sull'immagine per visualizzare le biblioteche
@@ -30,7 +31,7 @@
 
             <div class="col">
                 <a href="/visualizza-esperti/"><img
-                        th:src="@{~/image/home/Esperti.jpg}">
+                        th:src="@{~/image/home/esperto.jpg}">
                 </a>
 
                 <p>Clicca sull'immagine per visualizzare gli esperti
@@ -39,13 +40,33 @@
             </div>
             <div class="col">
                 <a href="/prenotazione-libri/"><img
-                        th:src="@{~/image/home/Prenotazione_libri.jpg}">
+                        th:src="@{~/image/home/prenotazione-libri.jpg}">
                 </a>
 
-                <p>Clicca sull'immagine per prenotare i libri che desider
+                <p>Clicca sull'immagine per prenotare i libri che desideri
                     senza doverti muovere di casa
                     (tranne che per andarli a prendere).</p>
             </div>
+
+        </div>
+
+        <div class="row" id="about">
+            <h3>About us</h3>
+            <p>
+                Biblionet nasce con l'obiettivo di facilitare l’avvicinamento di nuove persone al mondo della lettura.
+                Attraverso la nostra piattaforma online, viene fornito al lettore la possibilità di
+                cercare le biblioteche più vicine ad esso
+                e di visionare in modo semplice e veloce la lista dei libri disponibili in esse.
+                La piattaforma ha un duplice compito, ottimizzare il lavoro delle biblioteche
+                che si interfacciano con i loro clienti lettori e,
+                allo stesso tempo, aiutare i lettori meno esperti ad approcciarsi a questo mondo.
+                Inoltre, il sistema offre la possibilità di organizzare eventi, anche in collaborazione con le scuole,
+                con l’obiettivo di invogliare la popolazione a partecipare ad attività di lettura.
+                La figura dell’esperto che lavora in una biblioteca è molto importante per noi,
+                grazie ad essi infatti i lettori potranno accrescere le loro passioni e
+                rendere più viva la loro esperienza di lettura con la partecipazione ad attività di gruppo collettive
+                organizzate dagli esperti.
+            </p>
 
         </div>
 
