--- a/src/main/resources/templates/registrazione/registrazione.html
+++ b/src/main/resources/templates/registrazione/registrazione.html
@@ -22,7 +22,7 @@
 
                 <div class="col">
                     <button type="submit" value="Esperto" name="scelta"><img
-                            th:src="@{~/image/registrazione/Esperto.jpg}">
+                            th:src="@{~/image/home/esperto.jpg}" width="400px" height="600px">
                     </button>
 
                     <p>Clicca sull'immagine per registrati come esperto.
@@ -32,7 +32,7 @@
 
                 <div class="col">
                     <button type="submit" value="Biblioteca" name="scelta"><img
-                            th:src="@{~/image/registrazione/Biblioteca.jpg}">
+                            th:src="@{~/image/home/biblioteca.jpg}" width="400px" height="600px">
                     </button>
 
                     <p>Clicca sull'immagine per registrarti come biblioteca.
