--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,23 +51,137 @@
         </div>
 
         <div class="row" id="about">
-            <h3>About us</h3>
-            <p>
-                Biblionet nasce con l'obiettivo di facilitare l’avvicinamento di nuove persone al mondo della lettura.
-                Attraverso la nostra piattaforma online, viene fornito al lettore la possibilità di
-                cercare le biblioteche più vicine ad esso
-                e di visionare in modo semplice e veloce la lista dei libri disponibili in esse.
-                La piattaforma ha un duplice compito, ottimizzare il lavoro delle biblioteche
-                che si interfacciano con i loro clienti lettori e,
-                allo stesso tempo, aiutare i lettori meno esperti ad approcciarsi a questo mondo.
-                Inoltre, il sistema offre la possibilità di organizzare eventi, anche in collaborazione con le scuole,
-                con l’obiettivo di invogliare la popolazione a partecipare ad attività di lettura.
-                La figura dell’esperto che lavora in una biblioteca è molto importante per noi,
-                grazie ad essi infatti i lettori potranno accrescere le loro passioni e
-                rendere più viva la loro esperienza di lettura con la partecipazione ad attività di gruppo collettive
-                organizzate dagli esperti.
-            </p>
+            <!-- Section: Team -->
+            <section class="team-section text-center my-5">
 
+                <!-- Section heading -->
+                <h2 class="h1-responsive font-weight-bold my-5">Our amazing team</h2>
+                <!-- Section description -->
+                <p class="grey-text w-responsive mx-auto mb-5">Descrizione del team.</p>
+
+                <!-- Grid row -->
+                <div class="row">
+
+                    <!-- Grid column -->
+                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
+                        <div class="avatar mx-auto">
+                            <img th:src="@{~/image/home/icone/Lambiase.jpg}" class="rounded-circle z-depth-1"
+                                 alt="Sample avatar">
+                        </div>
+                        <h5 class="font-weight-bold mt-4 mb-3">Stefano Lambiase</h5>
+                        <p class="text-uppercase blue-text"><strong>Project Manager</strong></p>
+                        <p class="grey-text">Descrizione </p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
+                        <div class="avatar mx-auto">
+                            <img th:src="@{~/image/home/icone/Voria.jpg}"
+                                 class="rounded-circle z-depth-1"
+                                 alt="Sample avatar">
+                        </div>
+                        <h5 class="font-weight-bold mt-4 mb-3">Gianmario Voria</h5>
+                        <p class="text-uppercase blue-text"><strong>Developer</strong></p>
+                        <p class="grey-text">Descrizione</p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-lg-3 col-md-6 mb-md-0 mb-5">
+                        <div class="avatar mx-auto">
+                            <img th:src="@{~/image/home/icone/Pentangelo.jpg}"
+                                 class="rounded-circle z-depth-1"
+                                 alt="Sample avatar">
+                        </div>
+                        <h5 class="font-weight-bold mt-4 mb-3">Viviana Pentangelo</h5>
+                        <p class="text-uppercase blue-text"><strong>Developer</strong></p>
+                        <p class="grey-text">Descrizione</p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="avatar mx-auto">
+                            <img th:src="@{~/image/home/icone/DellaPorta.png}"
+                                 class="rounded-circle z-depth-1"
+                                 alt="Sample avatar">
+                        </div>
+                        <h5 class="font-weight-bold mt-4 mb-3">Antonio Della Porta</h5>
+                        <p class="text-uppercase blue-text"><strong>Developer</strong></p>
+                        <p class="grey-text">Descrizione</p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="avatar mx-auto">
+                            <img th:src="@{~/image/home/icone/Maiorino.jpg}"
+                                 class="rounded-circle z-depth-1"
+                                 alt="Sample avatar">
+                        </div>
+                        <h5 class="font-weight-bold mt-4 mb-3">Ciro Maiorino</h5>
+                        <p class="text-uppercase blue-text"><strong>Developer</strong></p>
+                        <p class="grey-text">Descrizione.</p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="avatar mx-auto">
+                            <img th:src="@{~/image/home/icone/Triggiani.jpg}"
+                                 class="rounded-circle z-depth-1"
+                                 alt="Sample avatar">
+                        </div>
+                        <h5 class="font-weight-bold mt-4 mb-3">Giulio Triggiani</h5>
+                        <p class="text-uppercase blue-text"><strong>Developer</strong></p>
+                        <p class="grey-text">Descrizione</p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="avatar mx-auto">
+                            <img th:src="@{~/image/home/icone/Casolaro.jpg}"
+                                 class="rounded-circle z-depth-1"
+                                 alt="Sample avatar">
+                        </div>
+                        <h5 class="font-weight-bold mt-4 mb-3">Alessio Casolaro</h5>
+                        <p class="text-uppercase blue-text"><strong>Developer</strong></p>
+                        <p class="grey-text">Descrizione</p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="avatar mx-auto">
+                            <img th:src="@{~/image/home/icone/Topo.jpg}"
+                                 class="rounded-circle z-depth-1"
+                                 alt="Sample avatar">
+                        </div>
+                        <h5 class="font-weight-bold mt-4 mb-3">Luca Topo</h5>
+                        <p class="text-uppercase blue-text"><strong>Developer</strong></p>
+                        <p class="grey-text">Descrizione</p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="avatar mx-auto">
+                            <img th:src="@{~/image/home/icone/Pagliara.jpg}"
+                                 class="rounded-circle z-depth-1"
+                                 alt="Sample avatar">
+                        </div>
+                        <h5 class="font-weight-bold mt-4 mb-3">Nicola Pagliara</h5>
+                        <p class="text-uppercase blue-text"><strong>Developer</strong></p>
+                        <p class="grey-text">Descrizione</p>
+                    </div>
+                    <!-- Grid column -->
+                </div>
+                <!-- Grid row -->
+
+            </section>
+            <!-- Section: Team -->
         </div>
 
     </div>
