--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -55,9 +55,12 @@
             <section class="team-section text-center my-5">
 
                 <!-- Section heading -->
-                <h2 class="h1-responsive font-weight-bold my-5">Our amazing team</h2>
+                <h2 class="h1-responsive font-weight-bold my-5">Icontra il nostro team</h2>
                 <!-- Section description -->
-                <p class="grey-text w-responsive mx-auto mb-5">Descrizione del team.</p>
+                <p class="grey-text w-responsive mx-auto mb-5"> Biblionet nasce con l'obiettivo di facilitare l’avvicinamento di nuove persone al mondo della lettura.
+                    Attraverso la nostra piattaforma online, viene fornito al lettore la possibilità di
+                    cercare le biblioteche più vicine ad esso
+                    e di visionare in modo semplice e veloce la lista dei libri disponibili in esse.</p>
 
                 <!-- Grid row -->
                 <div class="row">
