--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        .pad-bot {
+            padding-bottom: 1%;
+        }
+    </style>
 </head>
 <body>
 
@@ -57,7 +63,8 @@
                 <!-- Section heading -->
                 <h2 class="h1-responsive font-weight-bold my-5">Icontra il nostro team</h2>
                 <!-- Section description -->
-                <p class="grey-text w-responsive mx-auto mb-5"> Biblionet nasce con l'obiettivo di facilitare l’avvicinamento di nuove persone al mondo della lettura.
+                <p class="grey-text w-responsive mx-auto mb-5"> Biblionet nasce con l'obiettivo di facilitare
+                    l’avvicinamento di nuove persone al mondo della lettura.
                     Attraverso la nostra piattaforma online, viene fornito al lettore la possibilità di
                     cercare le biblioteche più vicine ad esso
                     e di visionare in modo semplice e veloce la lista dei libri disponibili in esse.</p>
@@ -66,19 +73,23 @@
                 <div class="row">
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
+                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-5 pad-bot">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Lambiase.jpg}" class="rounded-circle z-depth-1"
                                  alt="Sample avatar">
                         </div>
                         <h5 class="font-weight-bold mt-4 mb-3">Stefano Lambiase</h5>
                         <p class="text-uppercase blue-text"><strong>Project Manager</strong></p>
-                        <p class="grey-text">Descrizione </p>
+                        <!-- Github -->
+                        <a href="https://github.com/StefanoLambiase" class="p-2 fa-lg ins-ic">
+                            <i class="fa fa-github fa-lg"> </i>
+                        </a>
+
                     </div>
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
+                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-5 pad-bot">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Voria.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -86,12 +97,15 @@
                         </div>
                         <h5 class="font-weight-bold mt-4 mb-3">Gianmario Voria</h5>
                         <p class="text-uppercase blue-text"><strong>Developer</strong></p>
-                        <p class="grey-text">Descrizione</p>
+                        <!-- Github -->
+                        <a href="https://github.com/yabokk" class="p-2 fa-lg ins-ic">
+                            <i class="fa fa-github fa-lg"> </i>
+                        </a>
                     </div>
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6 mb-md-0 mb-5">
+                    <div class="col-lg-3 col-md-6 mb-md-0 mb-5 pad-bot">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Pentangelo.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -99,12 +113,15 @@
                         </div>
                         <h5 class="font-weight-bold mt-4 mb-3">Viviana Pentangelo</h5>
                         <p class="text-uppercase blue-text"><strong>Developer</strong></p>
-                        <p class="grey-text">Descrizione</p>
+                        <!-- Github -->
+                        <a href="https://github.com/vipenti" class="p-2 fa-lg ins-ic">
+                            <i class="fa fa-github fa-lg"> </i>
+                        </a>
                     </div>
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 pad-bot">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/DellaPorta.png}"
                                  class="rounded-circle z-depth-1"
@@ -112,12 +129,15 @@
                         </div>
                         <h5 class="font-weight-bold mt-4 mb-3">Antonio Della Porta</h5>
                         <p class="text-uppercase blue-text"><strong>Developer</strong></p>
-                        <p class="grey-text">Descrizione</p>
+                        <!-- Github -->
+                        <a href="https://github.com/atdepo" class="p-2 fa-lg ins-ic">
+                            <i class="fa fa-github fa-lg"> </i>
+                        </a>
                     </div>
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 pad-bot">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Maiorino.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -125,12 +145,15 @@
                         </div>
                         <h5 class="font-weight-bold mt-4 mb-3">Ciro Maiorino</h5>
                         <p class="text-uppercase blue-text"><strong>Developer</strong></p>
-                        <p class="grey-text">Descrizione.</p>
+                        <!-- Github -->
+                        <a href="https://github.com/Tekhorror" class="p-2 fa-lg ins-ic">
+                            <i class="fa fa-github fa-lg"> </i>
+                        </a>
                     </div>
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 pad-bot">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Triggiani.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -138,12 +161,15 @@
                         </div>
                         <h5 class="font-weight-bold mt-4 mb-3">Giulio Triggiani</h5>
                         <p class="text-uppercase blue-text"><strong>Developer</strong></p>
-                        <p class="grey-text">Descrizione</p>
+                        <!-- Github -->
+                        <a href="https://github.com/rayleighRe1" class="p-2 fa-lg ins-ic">
+                            <i class="fa fa-github fa-lg"> </i>
+                        </a>
                     </div>
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 pad-bot">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Casolaro.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -151,12 +177,15 @@
                         </div>
                         <h5 class="font-weight-bold mt-4 mb-3">Alessio Casolaro</h5>
                         <p class="text-uppercase blue-text"><strong>Developer</strong></p>
-                        <p class="grey-text">Descrizione</p>
+                        <!-- Github -->
+                        <a href="https://github.com/BearGrillz99" class="p-2 fa-lg ins-ic">
+                            <i class="fa fa-github fa-lg"> </i>
+                        </a>
                     </div>
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 pad-bot">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Topo.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -164,12 +193,15 @@
                         </div>
                         <h5 class="font-weight-bold mt-4 mb-3">Luca Topo</h5>
                         <p class="text-uppercase blue-text"><strong>Developer</strong></p>
-                        <p class="grey-text">Descrizione</p>
+                        <!-- Github -->
+                        <a href="https://github.com/Zekromaster" class="p-2 fa-lg ins-ic">
+                            <i class="fa fa-github fa-lg"> </i>
+                        </a>
                     </div>
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 pad-bot">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Pagliara.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -177,7 +209,11 @@
                         </div>
                         <h5 class="font-weight-bold mt-4 mb-3">Nicola Pagliara</h5>
                         <p class="text-uppercase blue-text"><strong>Developer</strong></p>
-                        <p class="grey-text">Descrizione</p>
+                        <!-- Github -->
+
+                        <a href="https://github.com/Nicola-Pagliara" class="p-2 fa-lg ins-ic">
+                            <i class="fa fa-github fa-lg"> </i>
+                        </a>
                     </div>
                     <!-- Grid column -->
                 </div>
@@ -186,8 +222,14 @@
             </section>
             <!-- Section: Team -->
         </div>
-
     </div>
+    <footer class="bg-light text-center text-lg-start">
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            © 2020 Copyright:Biblionet.com
+        </div>
+        <!-- Copyright -->
+    </footer>
 </div>
 </body>
 </html>
