--- a/src/main/resources/templates/club-del-libro/creazione-club.html
+++ b/src/main/resources/templates/club-del-libro/creazione-club.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout}">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Crea Club</title>
 </head>
 <body>
-    <form method="post" action="/club-del-libro/crea" enctype="multipart/form-data">
-        <p> Nome <input type="input" name="nome" required> </p>
-        <p> Descrizione <input type="input" name="descrizione" required> </p>
-        <div id="lista-generi"> </div>
-        <p> <input type="file" name="copertina" accept="image/png, image/jpeg" ></p>
-        <p> <input type="submit"></p>
-    </form>
+    <div layout:fragment="contenuto-pagina">
+        <h1>Creazione di un Club del Libro</h1>
+        <div layout:insert="~{/club-del-libro/_club-form::form-club(action=@{/club-del-libro/crea})}"></div>
+    </div>
 </body>
 </html>
