--- a/src/main/resources/templates/club-del-libro/visualizza-iscritti.html
+++ b/src/main/resources/templates/club-del-libro/visualizza-iscritti.html
@@ -8,11 +8,11 @@
 <body>
 <div layout:fragment="contenuto-pagina" class="container">
     <h3> Iscritti al Club: <th th:text="${club.nome}" /> </h3>
-    <table class="table" style="border-color: #b20909">
+    <table class="table">
         <tr>
-            <th scope="col">Nome lettore</th>
-            <th scope="col">Cognome lettore</th>
-            <th scope="col">Email lettore</th>
+            <th scope="col">Nome</th>
+            <th scope="col">Cognome</th>
+            <th scope="col">Email</th>
             <th scope="col">Contatta</th>
         </tr>
         <tr th:each="lettore : ${club.lettori}">
