--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -35,3 +35,16 @@ a:active, a:hover {
     color: #f5f5f5;
     text-decoration: none;
 }
+
+.twitter-typeahead {
+    width: 100%;
+}
+
+.tt-suggestion {
+    background-color: white;
+    text-align: left;
+}
+
+.tt-hint {
+    display: none;
+}
