--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,6 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .pad-bot {
-            padding-bottom: 1%;
-        }
-    </style>
 </head>
 <body>
 
@@ -61,7 +56,7 @@
             <section class="team-section text-center my-5">
 
                 <!-- Section heading -->
-                <h2 class="h1-responsive font-weight-bold my-5">Icontra il nostro team</h2>
+                <h2 class="h1-responsive font-weight-bold my-5">Incontra il nostro team</h2>
                 <!-- Section description -->
                 <p class="grey-text w-responsive mx-auto mb-5"> Biblionet nasce con l'obiettivo di facilitare
                     l’avvicinamento di nuove persone al mondo della lettura.
@@ -73,7 +68,7 @@
                 <div class="row">
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-5 pad-bot">
+                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-5 p-1">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Lambiase.jpg}" class="rounded-circle z-depth-1"
                                  alt="Sample avatar">
@@ -89,7 +84,7 @@
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-5 pad-bot">
+                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-5 p-1">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Voria.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -105,7 +100,7 @@
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6 mb-md-0 mb-5 pad-bot">
+                    <div class="col-lg-3 col-md-6 mb-md-0 mb-5 p-1">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Pentangelo.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -121,7 +116,7 @@
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6 pad-bot">
+                    <div class="col-lg-3 col-md-6 p-1">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/DellaPorta.png}"
                                  class="rounded-circle z-depth-1"
@@ -137,7 +132,7 @@
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6 pad-bot">
+                    <div class="col-lg-3 col-md-6 p-1">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Maiorino.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -153,7 +148,7 @@
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6 pad-bot">
+                    <div class="col-lg-3 col-md-6 p-1">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Triggiani.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -169,7 +164,7 @@
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6 pad-bot">
+                    <div class="col-lg-3 col-md-6 p-1">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Casolaro.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -185,7 +180,7 @@
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6 pad-bot">
+                    <div class="col-lg-3 col-md-6 p-1">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Topo.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -201,7 +196,7 @@
                     <!-- Grid column -->
 
                     <!-- Grid column -->
-                    <div class="col-lg-3 col-md-6 pad-bot">
+                    <div class="col-lg-3 col-md-6 p-1">
                         <div class="avatar mx-auto">
                             <img th:src="@{~/image/home/icone/Pagliara.jpg}"
                                  class="rounded-circle z-depth-1"
@@ -223,6 +218,7 @@
             <!-- Section: Team -->
         </div>
     </div>
+
     <footer class="bg-light text-center text-lg-start">
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
