Aggiunta funzionalità per visualizzare clubs del singolo lettore
Co-Authored-By: Alessio Casolaro <65906352+BearGrillz99@users.noreply.github.com>
Co-Authored-By: Antonio  <57596737+atdepo@users.noreply.github.com>

--- a/src/main/resources/templates/area-utente/visualizza-lettore.html
+++ b/src/main/resources/templates/area-utente/visualizza-lettore.html
@@ -92,6 +92,12 @@
                                                             <td th:text="${genere.nome}"></td>
                                                             <br>
                                                         </tr>
+                                                        <!-- Clubs visualization -->
+                                                        <tr th:each="club : ${clubs}">
+                                                            <th>Clubs:</th>
+                                                            <td th:text="${club.nome}"></td>
+                                                            <br>
+                                                        </tr>
                                                         </tbody>
                                                     </table>
                                                 </div>
